chore: adding blog page and made build work

--- a/src/content/blog/00-markdown-syntax/index.mdx
+++ b/src/content/blog/00-markdown-syntax/index.mdx
@@ -6,8 +6,6 @@ date: "2024-03-17"
 
 import Callout from "@/components/Callout.astro";
 
----
-
 ## Headings
 
 To create headings, use hash symbols (#) followed by a space. The number of hash symbols indicates the heading level.
@@ -190,10 +188,10 @@ To add an image, add an exclamation mark (!), followed by alt text in brackets (
 Use the `![altText](./image.*)` pattern relative to the same folder as the markdown file. Notice the period.
 
 ```md
-![X-Wing Starfighter](./x-wing.jpeg)
+![X-Wing Starfighter](/x-wing.jpeg)
 ```
 
-![X-Wing Starfighter](./x-wing.jpeg)
+![X-Wing Starfighter](/x-wing.jpeg)
 
 ### Public Image
 
